@@ -12,6 +12,7 @@ Changelog for CPAN-Testers-Schema
 
     - Added a method to translate from test report JSON documents to the
       main Stats table. Thanks @jberger!
+    - Added a method to get the CPAN upload from a test report
 
 0.011     2017-05-14 15:50:18+02:00 Europe/Paris
 
